# artifacts/api-server/src/routes/index.ts
@@ -2,13 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import securityRouter from "./security";
 import inferenceRouter from "./inference";
-import geminiRouter from "./gemini";
+import groqRouter from "./groq";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(securityRouter);
 router.use(inferenceRouter);
-router.use(geminiRouter);
+router.use(groqRouter);
 
 export default router;
